# stellar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  ast (2).txt  ast.txt  pizza.py  syntax.ebnf  test.rs  test.ry
crates/: ERRORS.md  README.md
crates/ry/: Cargo.toml  test.ry
crates/ry/src/: error.rs  lex.rs  lower.rs  main.rs  new.rs  new_project.rs  parse.rs  parse_manifest.rs  prefix.rs  unique_file.rs  version.rs
crates/ry_analyze/: Cargo.toml
crates/ry_analyze/src/: diagnostics.rs  environment.rs  lib.rs  project_interface.rs  scope.rs
crates/ry_analyze/tests/: environment.rs  module_scope.rs  scope.rs
crates/ry_ast/: Cargo.toml
crates/ry_ast/src/: lib.rs  name.rs  precedence.rs  printer.rs  serialize.rs  span.rs  token.rs  typed.rs  visit.rs  visitor.rs
crates/ry_ast/src/declaration/: attribute.rs  docstring.rs  enum.rs  function.rs  impl.rs  import.rs  mod.rs  struct.rs  trait.rs  type_alias.rs
crates/ry_ast/src/expression/: array.rs  as.rs  binary.rs  bool.rs  call.rs  char.rs  float.rs  if.rs  imaginary.rs  integer.rs  mod.rs  name.rs  parenthesized.rs  property.rs  string.rs  type_annotations.rs  unary.rs  while.rs
crates/ry_ast/src/statement/: defer.rs  expression.rs  mod.rs  return.rs  var.rs
crates/ry_ast/src/type/: array.rs  generics.rs  mod.rs  negative_trait.rs  option.rs  primary.rs  reference.rs  where_clause.rs
crates/ry_ast_lowering/: Cargo.toml
crates/ry_ast_lowering/src/: diagnostics.rs  lib.rs
crates/ry_config/: Cargo.toml
crates/ry_config/src/: diagnostics.rs  lib.rs
crates/ry_config/tests/: config.rs
crates/ry_diagnostics/: Cargo.toml
crates/ry_diagnostics/src/: diagnostic.rs  files.rs  lib.rs  macro_.rs  parser.rs  scope.rs
crates/ry_diagnostics/src/term/: config.rs  mod.rs  renderer.rs  views.rs
crates/ry_english_commons/: Cargo.toml
crates/ry_english_commons/src/: enumeration.rs  lib.rs  ordinal.rs  pluralize.rs
crates/ry_filesystem/: Cargo.toml
crates/ry_filesystem/src/: file.rs  file_utils.rs  in_memory_file.rs  in_memory_file_storage.rs  lib.rs  location.rs  path_interner.rs  path_resolver.rs  path_storage.rs  span.rs
crates/ry_filesystem/tests/: file.rs
crates/ry_fx_hash/: Cargo.toml  LICENSE
crates/ry_fx_hash/src/: lib.rs
crates/ry_hir/: Cargo.toml
crates/ry_hir/src/: lib.rs  ty.rs
crates/ry_interner/: Cargo.toml  README.md
crates/ry_interner/src/: lib.rs
crates/ry_lexer/: Cargo.toml  README.md
crates/ry_lexer/src/: lib.rs  number.rs  tests.rs
crates/ry_lexer/tests/: tests.rs
crates/ry_manifest/: Cargo.toml
crates/ry_manifest/src/: lib.rs
crates/ry_manifest/tests/: config.rs
crates/ry_name_resolution/: Cargo.toml
crates/ry_name_resolution/src/: build_context.rs  build_resolution_tree.rs  diagnostics.rs  lib.rs  resolution_tree_builder.rs
crates/ry_name_resolution/tests/: resolve.rs
crates/ry_parser/: Cargo.toml
crates/ry_parser/src/: diagnostics.rs  enum.rs  error.rs  expression.rs  function_decl.rs  impl.rs  imports.rs  item.rs  items.rs  lib.rs  list.rs  literal.rs  macros.rs  module.rs  path.rs  pattern.rs  statement.rs  struct_decl.rs  trait_decl.rs  type.rs
crates/ry_parser/src/expression/: array.rs  binary.rs  call.rs  cast.rs  if.rs  mod.rs  parenthesized.rs  postfix.rs  prefix.rs  property.rs  type_annotations.rs  while.rs
crates/ry_parser/src/item/: associated_functions.rs  enum.rs  function.rs  function_decl.rs  impl.rs  imports.rs  mod.rs  struct_decl.rs  trait_decl.rs  type_alias.rs
crates/ry_parser/src/statement/: defer.rs  mod.rs  return.rs  var.rs
crates/ry_parser/src/type/: array.rs  generics.rs  mod.rs  primary.rs  reference.rs  type_annotations.rs  where_clause.rs
crates/ry_parser/tests/: expression.rs  items.rs  macro.rs  macros.rs  statement.rs  type.rs
crates/ry_stable_likely/: Cargo.toml
crates/ry_stable_likely/src/: lib.rs
crates/ry_thir/: Cargo.toml
crates/ry_thir/src/: generic_parameter_scope.rs  lib.rs  ty.rs
crates/ry_type_inference/: Cargo.toml
crates/ry_type_inference/src/: lib.rs  local_scope.rs  module_scope.rs  project_scope.rs  scope.rs
crates/ry_type_inference/tests/: module_scope.rs  scope.rs
crates/ry_typecheck/: Cargo.toml
crates/ry_typecheck/src/: diagnostics.rs  generic_parameter_scope.rs  generics_scope.rs  lib.rs  test.rs  trait_resolution.rs  type_variable_factory.rs
crates/ry_typechecker/: Cargo.toml
crates/ry_typechecker/src/: diagnostics.rs  generic_parameters.rs  hir_storage.rs  lib.rs  resolution.rs  thir_storage.rs  type_variable_factory.rs
crates/ry_typechecker/src/signature_analysis/: mod.rs  signature_analysis_context.rs  type_alias.rs
crates/ry_typed_ast/: Cargo.toml
crates/ry_typed_ast/src/: lib.rs  ty.rs
crates/stellar/: Cargo.toml
crates/stellar/src/: collect_definitions.rs  collect_signatures.rs  debug_collect_definitions.rs  lex.rs  log.rs  lower.rs  main.rs  new.rs  parse.rs  parse_manifest.rs  prefix.rs  resolve_imports.rs  version.rs
crates/stellar_ast/: Cargo.toml
crates/stellar_ast/src/: lib.rs  precedence.rs  token.rs  visit.rs
crates/stellar_ast_lowering/: Cargo.toml
crates/stellar_ast_lowering/src/: diagnostics.rs  lib.rs
crates/stellar_database/: Cargo.toml
crates/stellar_database/src/: access_methods_macro.rs  id_type.rs  lib.rs  symbol.rs  ty.rs
crates/stellar_diagnostics/: Cargo.toml
crates/stellar_diagnostics/src/: diagnostic.rs  diagnostic_macro.rs  files.rs  lib.rs  macro_.rs
crates/stellar_diagnostics/src/term/: config.rs  mod.rs  renderer.rs  views.rs
crates/stellar_english_commons/: Cargo.toml
crates/stellar_english_commons/src/: enumeration.rs  lib.rs  ordinal.rs  pluralize.rs
crates/stellar_filesystem/: Cargo.toml
crates/stellar_filesystem/src/: file_utils.rs  in_memory_file.rs  in_memory_file_storage.rs  lib.rs  location.rs  path_resolver.rs
crates/stellar_filesystem/tests/: file.rs  in_memory_file.rs
crates/stellar_hir/: Cargo.toml
crates/stellar_hir/src/: lib.rs
docs/: README.md  diagnostics.md
examples/: add_two_numbers.ry  default-values.ry  enum.ry  (+19 more)
(+210 files in other folders)
