[workspace]
members = [
    "crates/ry",
    "crates/ry_analyze",
    "crates/ry_ast",
    "crates/ry_diagnostics",
    "crates/ry_filesystem",
    "crates/ry_interner",
    "crates/ry_lexer",
    "crates/ry_manifest",
    "crates/ry_name_resolution",
    "crates/ry_parser",
    "crates/ry_stable_likely",
    "crates/ry_typed_ast",
    "crates/ry_fx_hash",
]
