[workspace]
members = [
    "crates/stellar",
    "crates/stellar_ast",
    "crates/stellar_ast_lowering",
    "crates/stellar_database",
    "crates/stellar_depgraph",
    "crates/stellar_diagnostics",
    "crates/stellar_english_commons",
    "crates/stellar_filesystem",
    "crates/stellar_fx_hash",
    "crates/stellar_hir",
    "crates/stellar_interner",
    "crates/stellar_lexer",
    "crates/stellar_manifest",
    "crates/stellar_parser",
    "crates/stellar_stable_likely",
    "crates/stellar_thir",
    "crates/stellar_typechecker",
]
