[package]
name = "ry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]

[dependencies]
ry_parser = {path = "../ry_parser"}
ry_lexer = {path = "../ry_lexer"}
ry_diagnostics = {path = "../ry_diagnostics"}
ry_ast = {path = "../ry_ast"}
ry_interner = {path = "../ry_interner"}
ry_source_file = {path = "../ry_source_file"}
codespan-reporting = "0.11.1"
clap = {version = "4.1.4", features = ["derive"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
termcolor = "1.2.0"
leftpad-str = "6.6.6"
