[package]
name = "ry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements CLI for the Ry programming language."

[dependencies]
ry_parser = {path = "../ry_parser"}
ry_lexer = {path = "../ry_lexer"}
ry_diagnostics = {path = "../ry_diagnostics"}
ry_ast = {path = "../ry_ast"}
ry_interner = {path = "../ry_interner"}
ry_workspace = {path = "../ry_workspace"}
codespan-reporting = "0.11.1"
clap = {version = "4.1.4", features = ["derive"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
termcolor = "1.2.0"
leftpad-str = "6.6.6"
