[package]
name = "ry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements CLI for the Ry programming language."

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
codespan-reporting = "0.11.1"
leftpad-str = "9.9.9"
ry_ast = { path = "../ry_ast" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_filesystem = { path = "../ry_filesystem" }
ry_interner = { path = "../ry_interner" }
ry_lexer = { path = "../ry_lexer" }
ry_parser = { path = "../ry_parser" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
termcolor = "1.2.0"
