[package]
name = "ry_type_inference"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements type inference for the Ry programming language."

[dependencies]
ry_ast = { path = "../ry_ast" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_interner = { path = "../ry_interner" }
ry_workspace = { path = "../ry_workspace" }
pathdiff = "0.2.1"
