[package]
name = "ry_analyze"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements type inference for the Ry programming language."

[dependencies]
ry_diagnostics = { path = "../ry_diagnostics" }
ry_filesystem = { path = "../ry_filesystem" }
ry_interner = { path = "../ry_interner" }
ry_typed_ast = { path = "../ry_typed_ast" }
