[package]
name = "ry_ast"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Defines AST for the Ry programming language."

[dependencies]
derive_more = "0.99.17"
phf = { version = "0.11.1", features = ["macros"] }
ry_filesystem = { path = "../ry_filesystem" }
ry_interner = { path = "../ry_interner" }
termion = "2.0.1"
