[package]
name = "ry_ast_lowering"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Crates, responsible for desugaring AST and instantiating types."

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
ry_ast = { path = "../ry_ast" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_filesystem = { path = "../ry_filesystem" }
ry_hir = { path = "../ry_hir" }
ry_interner = { path = "../ry_interner" }
