[package]
name = "ry_config"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Parses and processes Ry projects' configuration files."

[dependencies]
serde = { version = "1.0.167", features = ["derive"] }
toml = "0.7.6"
