[package]
name = "ry_diagnostics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements diagnostics for the Ry programming language."

[dependencies]
ry_filesystem = { path = "../ry_filesystem" }
ry_fx_hash = { path = "../ry_fx_hash" }
ry_interner = { path = "../ry_interner" }
serde = { version = "1.0.183", optional = true, features = ["derive"] }
termcolor = "1.2.0"
unicode-width = "0.1.10"

[dev-dependencies]
anyhow = "1.0.72"
insta = "1.31.0"
lazy_static = "1.4.0"
peg = "0.8.1"
rustyline = "12.0.0"
structopt = "0.3.26"
unindent = "0.2.2"

[features]
serde = ["dep:serde"]
