[package]
name = "ry_filesystem"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Provides utilities for working with the file system."

[dependencies]
codespan-reporting = "0.11.1"
