[package]
name = "ry_fx_hash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements diagnostics for the Ry programming language."

[dependencies]
codespan-reporting = "0.11.1"
ry_filesystem = { path = "../ry_filesystem" }

