[package]
name = "ry_interner"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements identifier interner for the Ry programming language."

[dependencies]
hashbrown = "0.14.0"
