[package]
name = "ry_interner"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements identifier interner for the Ry programming language."

[dependencies]
derive_more = "0.99.17"
hashbrown = "0.14.0"
ry_fx_hash = { path = "../ry_fx_hash" }
serde = { version = "1.0.183", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
