[package]
name = "ry_lexer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]

[dependencies]
ry_ast = { path = "../ry_ast" }
unicode-xid = "0.2.4"
ry_interner = { path = "../ry_interner" }
ry_workspace = { path = "../ry_workspace" }
ry_stable_likely = { path = "../ry_stable_likely" }
