[package]
name = "ry_lexer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Lexer for the Ry programming language."

[dependencies]
ry_ast = { path = "../ry_ast" }
unicode-xid = "0.2.4"
ry_interner = { path = "../ry_interner" }
ry_filesystem = { path = "../ry_filesystem" }
ry_stable_likely = { path = "../ry_stable_likely" }
