[package]
name = "ry_lexer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Lexer for the Ry programming language."

[dependencies]
parking_lot = "0.12.1"
ry_ast = { path = "../ry_ast" }
ry_filesystem = { path = "../ry_filesystem" }
ry_interner = { path = "../ry_interner" }
ry_stable_likely = { path = "../ry_stable_likely" }
unicode-xid = "0.2.4"
