[package]
name = "ry_manifest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Parses and processes Ry projects' configuration files."

[dependencies]
ry_diagnostics = { path = "../ry_diagnostics" }
ry_filesystem = { path = "../ry_filesystem" }
serde = { version = "1.0.167", features = ["derive"] }
serde_ignored = "0.1.8"
toml = "0.7.6"
toml_edit = "0.19.12"
