[package]
name = "ry_name_resolution"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements name resolution compilation stage for the Ry programming language."

[dependencies]
derive_more = "0.99.17"
itertools = "0.11.0"
parking_lot = "0.12.1"
ry_ast = { path = "../ry_ast" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_filesystem = { path = "../ry_filesystem" }
ry_fx_hash = { path = "../ry_fx_hash" }
ry_interner = { path = "../ry_interner", features = ["tuples"] }
