[package]
name = "ry_parser"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]

[dependencies]
ry_ast = { path = "../ry_ast" }
ry_lexer = { path = "../ry_lexer" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_interner = { path = "../ry_interner" }
ry_source_file = { path = "../ry_source_file" }
