[package]
name = "ry_parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements syntax parser for the Ry programming language."

[dependencies]
ry_ast = { path = "../ry_ast" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_filesystem = { path = "../ry_filesystem" }
ry_interner = { path = "../ry_interner" }
ry_lexer = { path = "../ry_lexer" }
ry_stable_likely = { path = "../ry_stable_likely" }
tracing = "0.1.29"
