[package]
name = "ry_thir"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Defines THIR for the Ry programming language."

[dependencies]
ry_ast = { path = "../ry_ast" }
ry_filesystem = { path = "../ry_filesystem" }
ry_interner = { path = "../ry_interner" }
ry_name_resolution = { path = "../ry_name_resolution" }
ry_fx_hash = { path = "../ry_fx_hash" }

