[package]
name = "ry_type_inference"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]

[dependencies]
ry_ast = { path = "../ry_ast" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_interner = { path = "../ry_interner" }
ry_workspace = { path = "../ry_workspace" }
pathdiff = "0.2.1"
