[package]
name = "ry_typecheck"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements type checking compilation stage for the Ry programming language."

[dependencies]
derive_more = "0.99.17"
codespan-reporting = "0.11.1"
ry_ast = { path = "../ry_ast" }
ry_ast_lowering = { path = "../ry_ast_lowering" }
ry_diagnostics = { path = "../ry_diagnostics" }
ry_filesystem = { path = "../ry_filesystem" }
ry_fx_hash = { path = "../ry_fx_hash" }
ry_hir = { path = "../ry_hir" }
ry_interner = { path = "../ry_interner" }
ry_name_resolution = { path = "../ry_name_resolution" }
ry_parser = { path = "../ry_parser" }
ry_stable_likely = { path = "../ry_stable_likely" }
ry_thir = { path = "../ry_thir" }
