[package]
name = "ry_typed_ast"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ry-lang/ry"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Defines typed AST for the Ry programming language."

[dependencies]
ry_interner = { path = "../ry_interner" }
