[package]
name = "stellar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/stellar"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements CLI for the Stellar programming language."

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
leftpad-str = "9.9.9"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
stellar_ast = { path = "../stellar_ast" }
stellar_ast_lowering = { path = "../stellar_ast_lowering" }
stellar_diagnostics = { path = "../stellar_diagnostics" }
stellar_filesystem = { path = "../stellar_filesystem" }
stellar_hir = { path = "../stellar_hir", features = ["serde"] }
stellar_info = { path = "../stellar_info" }
stellar_interner = { path = "../stellar_interner" }
stellar_lexer = { path = "../stellar_lexer" }
stellar_manifest = { path = "../stellar_manifest" }
stellar_parser = { path = "../stellar_parser" }
stellar_database = { path = "../stellar_database" }
termcolor = "1.2.0"
tracing-subscriber = { version = "0.3.2", features = ["fmt", "env-filter"] }

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
