[package]
name = "stellar_ast"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/stellar"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Defines AST for the Stellar programming language."

[dependencies]
colorize = "0.1.0"
derive_more = "0.99.17"
phf = { version = "0.11.1", features = ["macros"] }
stellar_filesystem = { path = "../stellar_filesystem" }
stellar_interner = { path = "../stellar_interner" }
serde = { version = "1.0.183", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "stellar_filesystem/serde"]
