[package]
name = "stellar_ast_lowering"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/stellar"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Crates, responsible for desugaring AST and instantiating types."

[dependencies]
parking_lot = "0.12.1"
phf = { version = "0.11.1", features = ["macros"] }
rayon = "1.7.0"
stellar_ast = { path = "../stellar_ast" }
stellar_database = { path = "../stellar_database" }
stellar_diagnostics = { path = "../stellar_diagnostics" }
stellar_filesystem = { path = "../stellar_filesystem" }
stellar_hir = { path = "../stellar_hir" }
stellar_interner = { path = "../stellar_interner" }
