[package]
name = "stellar_database"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/stellar"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Defines the database."

[dependencies]
bincode = { version = "1.3.3", optional = true }
derive_more = "0.99.17"
filetime = "0.2.22"
paste = "1.0.14"
serde = { version = "1.0.188", features = ["derive"], optional = true }
stellar_ast = { path = "../stellar_ast" }
stellar_diagnostics = { path = "../stellar_diagnostics" }
stellar_filesystem = { path = "../stellar_filesystem" }
stellar_fx_hash = { path = "../stellar_fx_hash" }
stellar_interner = { path = "../stellar_interner" }

[features]
serde = ["dep:serde"]
bincode = ["serde", "dep:bincode"]
