[package]
name = "stellar_diagnostics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/stellar"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Implements diagnostics for the Stellar programming language."

[dependencies]
stellar_filesystem = { path = "../stellar_filesystem" }
stellar_fx_hash = { path = "../stellar_fx_hash" }
stellar_interner = { path = "../stellar_interner" }
serde = { version = "1.0.183", optional = true, features = ["derive"] }
termcolor = "1.2.0"
unicode-width = "0.1.10"

[features]
serde = ["dep:serde"]
