[package]
name = "stellar_filesystem"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/stellar"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Provides utilities for working with the file system."

[dependencies]
derive_more = "0.99.17"
stellar_fx_hash = { path = "../stellar_fx_hash" }
stellar_interner = { path = "../stellar_interner" }
serde = { version = "1.0.183", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "stellar_interner/serde"]
