[package]
name = "stellar_hir"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quantumatic/stellar"
authors = ["Adi Salimgereyev <adisalimgereev@gmail.com>"]
readme = "../../README.md"
description = "Defines HIR for the Stellar programming language."

[dependencies]
stellar_ast = { path = "../stellar_ast" }
stellar_filesystem = { path = "../stellar_filesystem" }
stellar_interner = { path = "../stellar_interner" }
serde = { version = "1.0.183", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "stellar_ast/serde"]
